fixed some bugs  - wrong font-size in mdInput label  - cloning fails on date

--- a/frontend/src/app/task/task.component.scss
+++ b/frontend/src/app/task/task.component.scss
@@ -1,4 +1,4 @@
-md-input-container {
+md-input-container#task-search {
     display: block !important;
     box-sizing: border-box;
     margin: 0 20px;
@@ -11,3 +11,4 @@ md-input-container {
         font-size: 30px !important;
     }
 }
+
