--- a/frontend/src/sass/_styles.scss
+++ b/frontend/src/sass/_styles.scss
@@ -3,6 +3,7 @@
 @import 'general';
 
 html {
+    line-height: normal;
     color: rgba(0, 0, 0, 0.87);
     width: 100%;
     height: 100%;
@@ -96,7 +97,7 @@ md-dialog-container {
             margin: 10px 0;
             @extend .text-primary-light;
             font-size: 2em;
-            font-weight: 500;
+            font-weight: normal;
         }
     }
 }
@@ -125,8 +126,6 @@ md-list-item {
 }
 
 md-card {
-    line-height: 1;
-
     &.list-card {
         padding: 0;
     }
